mimi/parser.out
Grammar:

Rule 0     S' -> text
Rule 1     text -> text term_atom
Rule 2     text -> term_atom
Rule 3     term_atom -> error EOA
Rule 4     term_atom -> phrase_atom EOA
Rule 5     phrase_atom -> complex_adjective_phrase
Rule 6     phrase_atom -> complex_noun_phrase
Rule 7     phrase_atom -> subject_suffix
Rule 8     phrase_atom -> verbal_phrase
Rule 9     phrase_atom -> complex_prepositional_phrase
Rule 10    phrase_atom -> adverbial_phrase
Rule 11    phrase_atom -> interrogative_phrase
Rule 12    verbal_phrase -> prepositional_VP
Rule 13    verbal_phrase -> normal_VP
Rule 14    prepositional_VP -> PREP verbal_phrase
Rule 15    normal_VP -> VERB PRS
Rule 16    normal_VP -> VERB
Rule 17    complex_noun_phrase -> complex_noun_phrase CONJ noun_phrase
Rule 18    complex_noun_phrase -> complex_noun_phrase noun_phrase
Rule 19    complex_noun_phrase -> noun_phrase
Rule 20    complex_adjective_phrase -> complex_adjective_phrase CONJ adjective_phrase
Rule 21    complex_adjective_phrase -> adjective_phrase
Rule 22    complex_prepositional_phrase -> prepositional_phrase
Rule 23    complex_prepositional_phrase -> complex_prepositional_phrase CONJ_P prepositional_phrase
Rule 24    prepositional_phrase -> PREP INRG
Rule 25    prepositional_phrase -> PREP PRIN
Rule 26    prepositional_phrase -> PREP ADVB
Rule 27    prepositional_phrase -> focussed_prepositional_phrase
Rule 28    focussed_prepositional_phrase -> extended_prepositional_phrase
Rule 29    focussed_prepositional_phrase -> ADVB focussed_prepositional_phrase
Rule 30    extended_prepositional_phrase -> PREP complex_noun_phrase
Rule 31    extended_prepositional_phrase -> PREP extended_prepositional_phrase
Rule 32    adverbial_phrase -> ADVB complex_noun_phrase
Rule 33    adjective_phrase -> ADJV_C noun_phrase
Rule 34    noun_phrase -> undetermined_phrase
Rule 35    noun_phrase -> determined_phrase opt_determination
Rule 36    determined_phrase -> determined_noun
Rule 37    determined_phrase -> SUBS_C determined_phrase
Rule 38    determined_noun -> NMPR ADJV_A
Rule 39    determined_noun -> PRDE
Rule 40    determined_noun -> PRPS
Rule 41    determined_noun -> NMPR
Rule 42    determined_noun -> PRS
Rule 43    determined_noun -> ART absolute_noun
Rule 44    absolute_noun -> NMPR
Rule 45    absolute_noun -> SUBS_A
Rule 46    undetermined_phrase -> undetermined_noun
Rule 47    undetermined_phrase -> SUBS_C undetermined_phrase
Rule 48    undetermined_noun -> SUBS_A ADJV_A
Rule 49    undetermined_noun -> SUBS_P
Rule 50    undetermined_noun -> SUBS_A
Rule 51    interrogative_phrase -> PRIN
Rule 52    opt_determination -> ART SUBS_A
Rule 53    opt_determination -> ART ADJV_A
Rule 54    opt_determination -> ART PRDE
Rule 55    opt_determination -> <empty>
Rule 56    subject_suffix -> INRG PRS
Rule 57    subject_suffix -> NEGA PRS
Rule 58    subject_suffix -> INTJ PRS

Unused terminals:

    SUBS_E
    ADJV_E

Terminals, with rules where they appear:

ADJV_A               : 38 48 53
ADJV_C               : 33
ADJV_E               : 
ADVB                 : 26 29 32
ART                  : 43 52 53 54
CONJ                 : 17 20
CONJ_P               : 23
EOA                  : 3 4
INRG                 : 24 56
INTJ                 : 58
NEGA                 : 57
NMPR                 : 38 41 44
PRDE                 : 39 54
PREP                 : 14 24 25 26 30 31
PRIN                 : 25 51
PRPS                 : 40
PRS                  : 15 42 56 57 58
SUBS_A               : 45 48 50 52
SUBS_C               : 37 47
SUBS_E               : 
SUBS_P               : 49
VERB                 : 15 16
error                : 3

Nonterminals, with rules where they appear:

absolute_noun        : 43
adjective_phrase     : 20 21
adverbial_phrase     : 10
complex_adjective_phrase : 5 20
complex_noun_phrase  : 6 17 18 30 32
complex_prepositional_phrase : 9 23
determined_noun      : 36
determined_phrase    : 35 37
extended_prepositional_phrase : 28 31
focussed_prepositional_phrase : 27 29
interrogative_phrase : 11
normal_VP            : 13
noun_phrase          : 17 18 19 33
opt_determination    : 35
phrase_atom          : 4
prepositional_VP     : 12
prepositional_phrase : 22 23
subject_suffix       : 7
term_atom            : 1 2
text                 : 1 0
undetermined_noun    : 46
undetermined_phrase  : 34 47
verbal_phrase        : 8 14


state 0

    (0) S' -> . text
    (1) text -> . text term_atom
    (2) text -> . term_atom
    (3) term_atom -> . error EOA
    (4) term_atom -> . phrase_atom EOA
    (5) phrase_atom -> . complex_adjective_phrase
    (6) phrase_atom -> . complex_noun_phrase
    (7) phrase_atom -> . subject_suffix
    (8) phrase_atom -> . verbal_phrase
    (9) phrase_atom -> . complex_prepositional_phrase
    (10) phrase_atom -> . adverbial_phrase
    (11) phrase_atom -> . interrogative_phrase
    (20) complex_adjective_phrase -> . complex_adjective_phrase CONJ adjective_phrase
    (21) complex_adjective_phrase -> . adjective_phrase
    (17) complex_noun_phrase -> . complex_noun_phrase CONJ noun_phrase
    (18) complex_noun_phrase -> . complex_noun_phrase noun_phrase
    (19) complex_noun_phrase -> . noun_phrase
    (56) subject_suffix -> . INRG PRS
    (57) subject_suffix -> . NEGA PRS
    (58) subject_suffix -> . INTJ PRS
    (12) verbal_phrase -> . prepositional_VP
    (13) verbal_phrase -> . normal_VP
    (22) complex_prepositional_phrase -> . prepositional_phrase
    (23) complex_prepositional_phrase -> . complex_prepositional_phrase CONJ_P prepositional_phrase
    (32) adverbial_phrase -> . ADVB complex_noun_phrase
    (51) interrogative_phrase -> . PRIN
    (33) adjective_phrase -> . ADJV_C noun_phrase
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (14) prepositional_VP -> . PREP verbal_phrase
    (15) normal_VP -> . VERB PRS
    (16) normal_VP -> . VERB
    (24) prepositional_phrase -> . PREP INRG
    (25) prepositional_phrase -> . PREP PRIN
    (26) prepositional_phrase -> . PREP ADVB
    (27) prepositional_phrase -> . focussed_prepositional_phrase
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (28) focussed_prepositional_phrase -> . extended_prepositional_phrase
    (29) focussed_prepositional_phrase -> . ADVB focussed_prepositional_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    (30) extended_prepositional_phrase -> . PREP complex_noun_phrase
    (31) extended_prepositional_phrase -> . PREP extended_prepositional_phrase
    error           shift and go to state 3
    INRG            shift and go to state 14
    NEGA            shift and go to state 16
    INTJ            shift and go to state 17
    ADVB            shift and go to state 21
    PRIN            shift and go to state 22
    ADJV_C          shift and go to state 23
    PREP            shift and go to state 26
    VERB            shift and go to state 27
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    text                           shift and go to state 1
    term_atom                      shift and go to state 2
    phrase_atom                    shift and go to state 4
    complex_adjective_phrase       shift and go to state 5
    complex_noun_phrase            shift and go to state 6
    subject_suffix                 shift and go to state 7
    verbal_phrase                  shift and go to state 8
    complex_prepositional_phrase   shift and go to state 9
    adverbial_phrase               shift and go to state 10
    interrogative_phrase           shift and go to state 11
    adjective_phrase               shift and go to state 12
    noun_phrase                    shift and go to state 13
    prepositional_VP               shift and go to state 18
    normal_VP                      shift and go to state 19
    prepositional_phrase           shift and go to state 20
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    focussed_prepositional_phrase  shift and go to state 28
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31
    extended_prepositional_phrase  shift and go to state 32

state 1

    (0) S' -> text .
    (1) text -> text . term_atom
    (3) term_atom -> . error EOA
    (4) term_atom -> . phrase_atom EOA
    (5) phrase_atom -> . complex_adjective_phrase
    (6) phrase_atom -> . complex_noun_phrase
    (7) phrase_atom -> . subject_suffix
    (8) phrase_atom -> . verbal_phrase
    (9) phrase_atom -> . complex_prepositional_phrase
    (10) phrase_atom -> . adverbial_phrase
    (11) phrase_atom -> . interrogative_phrase
    (20) complex_adjective_phrase -> . complex_adjective_phrase CONJ adjective_phrase
    (21) complex_adjective_phrase -> . adjective_phrase
    (17) complex_noun_phrase -> . complex_noun_phrase CONJ noun_phrase
    (18) complex_noun_phrase -> . complex_noun_phrase noun_phrase
    (19) complex_noun_phrase -> . noun_phrase
    (56) subject_suffix -> . INRG PRS
    (57) subject_suffix -> . NEGA PRS
    (58) subject_suffix -> . INTJ PRS
    (12) verbal_phrase -> . prepositional_VP
    (13) verbal_phrase -> . normal_VP
    (22) complex_prepositional_phrase -> . prepositional_phrase
    (23) complex_prepositional_phrase -> . complex_prepositional_phrase CONJ_P prepositional_phrase
    (32) adverbial_phrase -> . ADVB complex_noun_phrase
    (51) interrogative_phrase -> . PRIN
    (33) adjective_phrase -> . ADJV_C noun_phrase
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (14) prepositional_VP -> . PREP verbal_phrase
    (15) normal_VP -> . VERB PRS
    (16) normal_VP -> . VERB
    (24) prepositional_phrase -> . PREP INRG
    (25) prepositional_phrase -> . PREP PRIN
    (26) prepositional_phrase -> . PREP ADVB
    (27) prepositional_phrase -> . focussed_prepositional_phrase
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (28) focussed_prepositional_phrase -> . extended_prepositional_phrase
    (29) focussed_prepositional_phrase -> . ADVB focussed_prepositional_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    (30) extended_prepositional_phrase -> . PREP complex_noun_phrase
    (31) extended_prepositional_phrase -> . PREP extended_prepositional_phrase
    error           shift and go to state 3
    INRG            shift and go to state 14
    NEGA            shift and go to state 16
    INTJ            shift and go to state 17
    ADVB            shift and go to state 21
    PRIN            shift and go to state 22
    ADJV_C          shift and go to state 23
    PREP            shift and go to state 26
    VERB            shift and go to state 27
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    term_atom                      shift and go to state 39
    phrase_atom                    shift and go to state 4
    complex_adjective_phrase       shift and go to state 5
    complex_noun_phrase            shift and go to state 6
    subject_suffix                 shift and go to state 7
    verbal_phrase                  shift and go to state 8
    complex_prepositional_phrase   shift and go to state 9
    adverbial_phrase               shift and go to state 10
    interrogative_phrase           shift and go to state 11
    adjective_phrase               shift and go to state 12
    noun_phrase                    shift and go to state 13
    prepositional_VP               shift and go to state 18
    normal_VP                      shift and go to state 19
    prepositional_phrase           shift and go to state 20
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    focussed_prepositional_phrase  shift and go to state 28
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31
    extended_prepositional_phrase  shift and go to state 32

state 2

    (2) text -> term_atom .
    error           reduce using rule 2 (text -> term_atom .)
    INRG            reduce using rule 2 (text -> term_atom .)
    NEGA            reduce using rule 2 (text -> term_atom .)
    INTJ            reduce using rule 2 (text -> term_atom .)
    ADVB            reduce using rule 2 (text -> term_atom .)
    PRIN            reduce using rule 2 (text -> term_atom .)
    ADJV_C          reduce using rule 2 (text -> term_atom .)
    PREP            reduce using rule 2 (text -> term_atom .)
    VERB            reduce using rule 2 (text -> term_atom .)
    SUBS_C          reduce using rule 2 (text -> term_atom .)
    SUBS_A          reduce using rule 2 (text -> term_atom .)
    SUBS_P          reduce using rule 2 (text -> term_atom .)
    NMPR            reduce using rule 2 (text -> term_atom .)
    PRDE            reduce using rule 2 (text -> term_atom .)
    PRPS            reduce using rule 2 (text -> term_atom .)
    PRS             reduce using rule 2 (text -> term_atom .)
    ART             reduce using rule 2 (text -> term_atom .)
    $end            reduce using rule 2 (text -> term_atom .)


state 3

    (3) term_atom -> error . EOA
    EOA             shift and go to state 40


state 4

    (4) term_atom -> phrase_atom . EOA
    EOA             shift and go to state 41


state 5

    (5) phrase_atom -> complex_adjective_phrase .
    (20) complex_adjective_phrase -> complex_adjective_phrase . CONJ adjective_phrase
    EOA             reduce using rule 5 (phrase_atom -> complex_adjective_phrase .)
    CONJ            shift and go to state 42


state 6

    (6) phrase_atom -> complex_noun_phrase .
    (17) complex_noun_phrase -> complex_noun_phrase . CONJ noun_phrase
    (18) complex_noun_phrase -> complex_noun_phrase . noun_phrase
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    EOA             reduce using rule 6 (phrase_atom -> complex_noun_phrase .)
    CONJ            shift and go to state 43
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    noun_phrase                    shift and go to state 44
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31

state 7

    (7) phrase_atom -> subject_suffix .
    EOA             reduce using rule 7 (phrase_atom -> subject_suffix .)


state 8

    (8) phrase_atom -> verbal_phrase .
    EOA             reduce using rule 8 (phrase_atom -> verbal_phrase .)


state 9

    (9) phrase_atom -> complex_prepositional_phrase .
    (23) complex_prepositional_phrase -> complex_prepositional_phrase . CONJ_P prepositional_phrase
    EOA             reduce using rule 9 (phrase_atom -> complex_prepositional_phrase .)
    CONJ_P          shift and go to state 45


state 10

    (10) phrase_atom -> adverbial_phrase .
    EOA             reduce using rule 10 (phrase_atom -> adverbial_phrase .)


state 11

    (11) phrase_atom -> interrogative_phrase .
    EOA             reduce using rule 11 (phrase_atom -> interrogative_phrase .)


state 12

    (21) complex_adjective_phrase -> adjective_phrase .
    CONJ            reduce using rule 21 (complex_adjective_phrase -> adjective_phrase .)
    EOA             reduce using rule 21 (complex_adjective_phrase -> adjective_phrase .)


state 13

    (19) complex_noun_phrase -> noun_phrase .
    CONJ            reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    SUBS_C          reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    SUBS_A          reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    SUBS_P          reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    NMPR            reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    PRDE            reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    PRPS            reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    PRS             reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    ART             reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    EOA             reduce using rule 19 (complex_noun_phrase -> noun_phrase .)
    CONJ_P          reduce using rule 19 (complex_noun_phrase -> noun_phrase .)


state 14

    (56) subject_suffix -> INRG . PRS
    PRS             shift and go to state 46


state 15

    (42) determined_noun -> PRS .
    ART             reduce using rule 42 (determined_noun -> PRS .)
    CONJ            reduce using rule 42 (determined_noun -> PRS .)
    SUBS_C          reduce using rule 42 (determined_noun -> PRS .)
    SUBS_A          reduce using rule 42 (determined_noun -> PRS .)
    SUBS_P          reduce using rule 42 (determined_noun -> PRS .)
    NMPR            reduce using rule 42 (determined_noun -> PRS .)
    PRDE            reduce using rule 42 (determined_noun -> PRS .)
    PRPS            reduce using rule 42 (determined_noun -> PRS .)
    PRS             reduce using rule 42 (determined_noun -> PRS .)
    EOA             reduce using rule 42 (determined_noun -> PRS .)
    CONJ_P          reduce using rule 42 (determined_noun -> PRS .)


state 16

    (57) subject_suffix -> NEGA . PRS
    PRS             shift and go to state 47


state 17

    (58) subject_suffix -> INTJ . PRS
    PRS             shift and go to state 48


state 18

    (12) verbal_phrase -> prepositional_VP .
    EOA             reduce using rule 12 (verbal_phrase -> prepositional_VP .)


state 19

    (13) verbal_phrase -> normal_VP .
    EOA             reduce using rule 13 (verbal_phrase -> normal_VP .)


state 20

    (22) complex_prepositional_phrase -> prepositional_phrase .
    CONJ_P          reduce using rule 22 (complex_prepositional_phrase -> prepositional_phrase .)
    EOA             reduce using rule 22 (complex_prepositional_phrase -> prepositional_phrase .)


state 21

    (32) adverbial_phrase -> ADVB . complex_noun_phrase
    (29) focussed_prepositional_phrase -> ADVB . focussed_prepositional_phrase
    (17) complex_noun_phrase -> . complex_noun_phrase CONJ noun_phrase
    (18) complex_noun_phrase -> . complex_noun_phrase noun_phrase
    (19) complex_noun_phrase -> . noun_phrase
    (28) focussed_prepositional_phrase -> . extended_prepositional_phrase
    (29) focussed_prepositional_phrase -> . ADVB focussed_prepositional_phrase
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (30) extended_prepositional_phrase -> . PREP complex_noun_phrase
    (31) extended_prepositional_phrase -> . PREP extended_prepositional_phrase
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    ADVB            shift and go to state 49
    PREP            shift and go to state 52
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    complex_noun_phrase            shift and go to state 50
    focussed_prepositional_phrase  shift and go to state 51
    noun_phrase                    shift and go to state 13
    extended_prepositional_phrase  shift and go to state 32
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31

state 22

    (51) interrogative_phrase -> PRIN .
    EOA             reduce using rule 51 (interrogative_phrase -> PRIN .)


state 23

    (33) adjective_phrase -> ADJV_C . noun_phrase
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    noun_phrase                    shift and go to state 53
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31

state 24

    (34) noun_phrase -> undetermined_phrase .
    CONJ            reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    SUBS_C          reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    SUBS_A          reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    SUBS_P          reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    NMPR            reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    PRDE            reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    PRPS            reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    PRS             reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    ART             reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    EOA             reduce using rule 34 (noun_phrase -> undetermined_phrase .)
    CONJ_P          reduce using rule 34 (noun_phrase -> undetermined_phrase .)


state 25

    (35) noun_phrase -> determined_phrase . opt_determination
    (52) opt_determination -> . ART SUBS_A
    (53) opt_determination -> . ART ADJV_A
    (54) opt_determination -> . ART PRDE
    (55) opt_determination -> .
  ! shift/reduce conflict for ART resolved as shift
    ART             shift and go to state 55
    CONJ            reduce using rule 55 (opt_determination -> .)
    SUBS_C          reduce using rule 55 (opt_determination -> .)
    SUBS_A          reduce using rule 55 (opt_determination -> .)
    SUBS_P          reduce using rule 55 (opt_determination -> .)
    NMPR            reduce using rule 55 (opt_determination -> .)
    PRDE            reduce using rule 55 (opt_determination -> .)
    PRPS            reduce using rule 55 (opt_determination -> .)
    PRS             reduce using rule 55 (opt_determination -> .)
    EOA             reduce using rule 55 (opt_determination -> .)
    CONJ_P          reduce using rule 55 (opt_determination -> .)

    opt_determination              shift and go to state 54

state 26

    (14) prepositional_VP -> PREP . verbal_phrase
    (24) prepositional_phrase -> PREP . INRG
    (25) prepositional_phrase -> PREP . PRIN
    (26) prepositional_phrase -> PREP . ADVB
    (30) extended_prepositional_phrase -> PREP . complex_noun_phrase
    (31) extended_prepositional_phrase -> PREP . extended_prepositional_phrase
    (12) verbal_phrase -> . prepositional_VP
    (13) verbal_phrase -> . normal_VP
    (17) complex_noun_phrase -> . complex_noun_phrase CONJ noun_phrase
    (18) complex_noun_phrase -> . complex_noun_phrase noun_phrase
    (19) complex_noun_phrase -> . noun_phrase
    (30) extended_prepositional_phrase -> . PREP complex_noun_phrase
    (31) extended_prepositional_phrase -> . PREP extended_prepositional_phrase
    (14) prepositional_VP -> . PREP verbal_phrase
    (15) normal_VP -> . VERB PRS
    (16) normal_VP -> . VERB
    (34) noun_phrase -> . undetermined_phrase
    (35) noun_phrase -> . determined_phrase opt_determination
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    INRG            shift and go to state 58
    PRIN            shift and go to state 59
    ADVB            shift and go to state 60
    PREP            shift and go to state 56
    VERB            shift and go to state 27
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    verbal_phrase                  shift and go to state 57
    complex_noun_phrase            shift and go to state 61
    extended_prepositional_phrase  shift and go to state 62
    prepositional_VP               shift and go to state 18
    normal_VP                      shift and go to state 19
    noun_phrase                    shift and go to state 13
    undetermined_phrase            shift and go to state 24
    determined_phrase              shift and go to state 25
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31

state 27

    (15) normal_VP -> VERB . PRS
    (16) normal_VP -> VERB .
    PRS             shift and go to state 63
    EOA             reduce using rule 16 (normal_VP -> VERB .)


state 28

    (27) prepositional_phrase -> focussed_prepositional_phrase .
    CONJ_P          reduce using rule 27 (prepositional_phrase -> focussed_prepositional_phrase .)
    EOA             reduce using rule 27 (prepositional_phrase -> focussed_prepositional_phrase .)


state 29

    (46) undetermined_phrase -> undetermined_noun .
    CONJ            reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    SUBS_C          reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    SUBS_A          reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    SUBS_P          reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    NMPR            reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    PRDE            reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    PRPS            reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    PRS             reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    ART             reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    EOA             reduce using rule 46 (undetermined_phrase -> undetermined_noun .)
    CONJ_P          reduce using rule 46 (undetermined_phrase -> undetermined_noun .)


state 30

    (47) undetermined_phrase -> SUBS_C . undetermined_phrase
    (37) determined_phrase -> SUBS_C . determined_phrase
    (46) undetermined_phrase -> . undetermined_noun
    (47) undetermined_phrase -> . SUBS_C undetermined_phrase
    (36) determined_phrase -> . determined_noun
    (37) determined_phrase -> . SUBS_C determined_phrase
    (48) undetermined_noun -> . SUBS_A ADJV_A
    (49) undetermined_noun -> . SUBS_P
    (50) undetermined_noun -> . SUBS_A
    (38) determined_noun -> . NMPR ADJV_A
    (39) determined_noun -> . PRDE
    (40) determined_noun -> . PRPS
    (41) determined_noun -> . NMPR
    (42) determined_noun -> . PRS
    (43) determined_noun -> . ART absolute_noun
    SUBS_C          shift and go to state 30
    SUBS_A          shift and go to state 33
    SUBS_P          shift and go to state 34
    NMPR            shift and go to state 35
    PRDE            shift and go to state 36
    PRPS            shift and go to state 37
    PRS             shift and go to state 15
    ART             shift and go to state 38

    undetermined_phrase            shift and go to state 64
    determined_phrase              shift and go to state 65
    undetermined_noun              shift and go to state 29
    determined_noun                shift and go to state 31

state 31

    (36) determined_phrase -> determined_noun .
    ART             reduce using rule 36 (determined_phrase -> determined_noun .)
    CONJ            reduce using rule 36 (determined_phrase -> determined_noun .)
    SUBS_C          reduce using rule 36 (determined_phrase -> determined_noun .)
    SUBS_A          reduce using rule 36 (determined_phrase -> determined_noun .)
    SUBS_P          reduce using rule 36 (determined_phrase -> determined_noun .)
    NMPR            reduce using rule 36 (determined_phrase -> determined_noun .)
    PRDE            reduce using rule 36 (determined_phrase -> determined_noun .)
    PRPS            reduce using rule 36 (determined_phrase -> determined_noun .)
    PRS             reduce using rule 36 (determined_phrase -> determined_noun .)
    EOA             reduce using rule 36 (determined_phrase -> determined_noun .)
    CONJ_P          reduce using rule 36 (determined_phrase -> determined_noun .)


state 32

    (28) focussed_prepositional_phrase -> extended_prepositional_phrase .
    CONJ_P          reduce using rule 28 (focussed_prepositional_phrase -> extended_prepositional_phrase .)
    EOA             reduce using rule 28 (focussed_prepositional_phrase -> extended_prepositional_phrase .)


state 33

    (48) undetermined_noun -> SUBS_A . ADJV_A
    (50) undetermined_noun -> SUBS_A .
    ADJV_A          shift and go to state 66
    CONJ            reduce using rule 50 (undetermined_noun -> SUBS_A .)
    SUBS_C          reduce using rule 50 (undetermined_noun -> SUBS_A .)
    SUBS_A          reduce using rule 50 (undetermined_noun -> SUBS_A .)
    SUBS_P          reduce using rule 50 (undetermined_noun -> SUBS_A .)
    NMPR            reduce using rule 50 (undetermined_noun -> SUBS_A .)
    PRDE            reduce using rule 50 (undetermined_noun -> SUBS_A .)
    PRPS            reduce using rule 50 (undetermined_noun -> SUBS_A .)
    PRS             reduce using rule 50 (undetermined_noun -> SUBS_A .)
    ART             reduce using rule 50 (undetermined_noun -> SUBS_A .)
    EOA             reduce using rule 50 (undetermined_noun -> SUBS_A .)
    CONJ_P          reduce using rule 50 (undetermined_noun -> SUBS_A .)


state 34
